crates/nargo_cli/tests/compile_failure/dup_trait_implementation_2/src/main.nr
trait Default {
}

struct Foo {
    bar: Field,
}

// Duplicate trait implementations should not compile
impl Default for Foo {
}

// Duplicate trait implementations should not compile
impl Default for Foo {
}


fn main(x: Field, y: Field) {
}
